# actix-web-sqlx-tera-comments-server

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/templates/: comments.html
